# Airbus-Ship-Detection

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.training.yaml  docker-compose.training.yml  docker-compose.yaml  pyproject.toml
dockers/: Dockerfile.base
dockers/api/: Dockerfile
dockers/consumer/: Dockerfile
dockers/data_ingestion/: Dockerfile
dockers/inference/: Dockerfile
dockers/model_evaluation/: Dockerfile
dockers/model_training/: Dockerfile
dockers/preprocessing/: Dockerfile
dockers/producer/: Dockerfile
docs/: README.md
k8s/: deployment.yaml  service.yaml
notebooks/: airbus-ship-detection.ipynb  fine-tuning-lr.ipynb
src/components/data_ingestion/: README.md  download_dataset.sh
src/components/model_evaluation/: evaluate.py  utils.py
src/components/model_training/: build_model.py  main.py  read_tfrecord.py  train.py  unet_blocks.py  unet_model.py  utils.py
src/components/model_training/cfg/: unet.yaml
src/components/preprocessing/: load_data.py  preprocess.py  save_tfrecord.py  utils.py
src/inference/api/: main.py
src/inference/consumer/: consumer.py
src/inference/producer/: producer.py
src/pipelines/: inference_pipeline.py  training_pipelines.py
tests/: Dockerfile
tests/Integration_tests/load_server/: Dockerfile
tests/load_server/: Dockerfile  load_server_test.py
