[tool.poetry]
name = "airbus-ship-detection"
version = "0.1.0"
description = ""
authors = ["ldebele <lemidebele@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "2.0.2"
mlflow = "^2.14.3"
pillow = "^10.4.0"
opencv-python = "4.6.0.66"
matplotlib = "3.7.5"
scikit-learn = "1.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"


[tool.poetry.group.inference.dependencies]
fastapi = "^0.111.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
