[tool.poetry]
name = "airbus-ship-detection"
version = "0.1.0"
description = ""
authors = ["ldebele <lemidebele@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.0.2"
mlflow = "^2.14.3"
pillow = "^10.4.0"
opencv-python = "4.6.0.66"
matplotlib = "3.7.5"
scikit-learn = "1.3.2"
requests = "^2.32.3"
tensorflow = "^2.17.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"


[tool.poetry.group.api.dependencies]

[tool.poetry.group.pub-sub.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
